src/include/c_api.h

/// Replace text in the specified range (atomic operation for precise replacements such as textEdit)
/// @param start_line start line of replacement range(0-based)
/// @param start_column Start column of replacement range (0-based)
/// @param end_line end line of replacement range(0-based)
/// @param end_column End column of replacement range (0-based)
/// @param text Replacement UTF8 text
/// @return TextEditResult binary payload, returns NULL if there is no change
EDITOR_API const uint8_t* editor_replace_text(intptr_t editor_handle,
    size_t start_line, size_t start_column,
    size_t end_line, size_t end_column,
    const char* text, size_t* out_size);
/// Delete text in the specified range
/// @param start_line start line of deletion range(0-based)
/// @param start_column Start column of deletion range (0-based)
/// @param end_line end line of deletion range(0-based)
/// @param end_column End column of deletion range (0-based)
/// @return TextEditResult binary payload, returns NULL if there is no change
EDITOR_API const uint8_t* editor_delete_text(intptr_t editor_handle,
    size_t start_line, size_t start_column,
    size_t end_line, size_t end_column, size_t* out_size);
/// Delete one character before cursor (Backspace behavior); delete selection if present
/// @return TextEditResult binary payload, returns NULL if there is no change
EDITOR_API const uint8_t* editor_backspace(intptr_t editor_handle, size_t* out_size);
/// Delete one character after cursor (Delete behavior); delete selection if present
/// @return TextEditResult binary payload, returns NULL if there is no change
EDITOR_API const uint8_t* editor_delete_forward(intptr_t editor_handle, size_t* out_size);
/// Move current line (or lines covered by selection) up by one line
/// @return TextEditResult binary payload, returns NULL if there is no change
EDITOR_API const uint8_t* editor_move_line_up(intptr_t editor_handle, size_t* out_size);
/// Move current line (or lines covered by selection) down by one line
/// @return TextEditResult binary payload, returns NULL if there is no change
EDITOR_API const uint8_t* editor_move_line_down(intptr_t editor_handle, size_t* out_size);
/// Copy current line (or lines covered by selection) upward
/// @return TextEditResult binary payload, returns NULL if there is no change
EDITOR_API const uint8_t* editor_copy_line_up(intptr_t editor_handle, size_t* out_size);
/// Copy current line (or lines covered by selection) downward
/// @return TextEditResult binary payload, returns NULL if there is no change
EDITOR_API const uint8_t* editor_copy_line_down(intptr_t editor_handle, size_t* out_size);
/// Delete current line (or all lines covered by selection)
/// @return TextEditResult binary payload, returns NULL if there is no change
EDITOR_API const uint8_t* editor_delete_line(intptr_t editor_handle, size_t* out_size);
/// Insert empty line above current line
/// @return TextEditResult binary payload, returns NULL if there is no change
EDITOR_API const uint8_t* editor_insert_line_above(intptr_t editor_handle, size_t* out_size);
/// Insert empty line below current line
/// @return TextEditResult binary payload, returns NULL if there is no change
EDITOR_API const uint8_t* editor_insert_line_below(intptr_t editor_handle, size_t* out_size);
/// Undo last edit operation
/// @return TextEditResult binary payload, returns NULL when nothing can be undone
EDITOR_API const uint8_t* editor_undo(intptr_t editor_handle, size_t* out_size);
/// Redo last undone operation
/// @return TextEditResult binary payload, returns NULL when nothing can be redone
EDITOR_API const uint8_t* editor_redo(intptr_t editor_handle, size_t* out_size);
/// Whether undo is available
/// @return 1=yes, 0=no
EDITOR_API int editor_can_undo(intptr_t editor_handle);
/// Whether redo is available
/// @return 1=yes, 0=no
EDITOR_API int editor_can_redo(intptr_t editor_handle);
/// Set cursor position
/// @param line Line number(0-based)
/// @param column Column number (0-based)
EDITOR_API void editor_set_cursor_position(intptr_t editor_handle, size_t line, size_t column);
/// Get cursor position
/// @param out_line Output: line number
/// @param out_column Output: column number
EDITOR_API void editor_get_cursor_position(intptr_t editor_handle, size_t* out_line, size_t* out_column);
/// Select all
EDITOR_API void editor_select_all(intptr_t editor_handle);
/// Set selection range
/// @param start_line selection start line(0-based)
/// @param start_column selection start column (0-based)
/// @param end_line selection end line(0-based)
/// @param end_column selection end column (0-based)
EDITOR_API void editor_set_selection(intptr_t editor_handle, size_t start_line, size_t start_column, size_t end_line, size_t end_column);
/// Get current selection range (two cursor positions)
/// @param out_start_line Output: selection start line
/// @param out_start_column Output: selection start column
/// @param out_end_line Output: selection end line
/// @param out_end_column Output: selection end column
/// @return 1=has selection, 0=no selection
EDITOR_API int editor_get_selection(intptr_t editor_handle, size_t* out_start_line, size_t* out_start_column, size_t* out_end_line, size_t* out_end_column);
/// Get selected text
/// @return Selected text (UTF8)
EDITOR_API const char* editor_get_selected_text(intptr_t editor_handle);
/// Get text range of word at cursor (scan continuous word chars to the left)
/// @param out_start_line Output: start line
/// @param out_start_column Output: start column
/// @param out_end_line Output: end line
/// @param out_end_column Output: end column
EDITOR_API void editor_get_word_range_at_cursor(intptr_t editor_handle, size_t* out_start_line, size_t* out_start_column, size_t* out_end_line, size_t* out_end_column);
/// Get text content of word at cursor
/// @return Word text (UTF8); returns empty string when cursor is not on a word
EDITOR_API const char* editor_get_word_at_cursor(intptr_t editor_handle);
/// Move cursor left
/// @param extend_selection Whether to extend selection (Shift behavior)
EDITOR_API void editor_move_cursor_left(intptr_t editor_handle, int extend_selection);
/// Move cursor right
/// @param extend_selection Whether to extend selection
EDITOR_API void editor_move_cursor_right(intptr_t editor_handle, int extend_selection);
/// Move cursor up
/// @param extend_selection Whether to extend selection
EDITOR_API void editor_move_cursor_up(intptr_t editor_handle, int extend_selection);
/// Move cursor down
/// @param extend_selection Whether to extend selection
EDITOR_API void editor_move_cursor_down(intptr_t editor_handle, int extend_selection);
/// Move cursor to line start
/// @param extend_selection Whether to extend selection
EDITOR_API void editor_move_cursor_to_line_start(intptr_t editor_handle, int extend_selection);
/// Move cursor to line end
/// @param extend_selection Whether to extend selection
EDITOR_API void editor_move_cursor_to_line_end(intptr_t editor_handle, int extend_selection);
/// Notify editor that IME composition starts
EDITOR_API void editor_composition_start(intptr_t editor_handle);
/// Update IME composition text
/// @param text Current composition text (UTF8), full composition text each time not incremental
EDITOR_API void editor_composition_update(intptr_t editor_handle, const char* text);
/// End IME composition and commit final text
/// @param committed_text Final committed text (UTF8); if NULL, use current composition text
/// @return TextEditResult binary payload, returns NULL if there is no change
EDITOR_API const uint8_t* editor_composition_end(intptr_t editor_handle, const char* committed_text, size_t* out_size);
/// Cancel IME composition (do not commit any text)
EDITOR_API void editor_composition_cancel(intptr_t editor_handle);