platform/Flutter/sweeteditor/lib/sweeteditor_bindings_generated.dart


/// Replace text in the specified range (atomic operation for precise replacements such as textEdit)
/// @param start_line start line of replacement range(0-based)
/// @param start_column Start column of replacement range (0-based)
/// @param end_line end line of replacement range(0-based)
/// @param end_column End column of replacement range (0-based)
/// @param text Replacement UTF8 text
/// @return TextEditResult binary payload, returns NULL if there is no change
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Size,
    ffi.Size,
    ffi.Size,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_replace_text(
  int editor_handle,
  int start_line,
  int start_column,
  int end_line,
  int end_column,
  ffi.Pointer<ffi.Char> text,
  ffi.Pointer<ffi.Size> out_size,
);

/// Delete text in the specified range
/// @param start_line start line of deletion range(0-based)
/// @param start_column Start column of deletion range (0-based)
/// @param end_line end line of deletion range(0-based)
/// @param end_column End column of deletion range (0-based)
/// @return TextEditResult binary payload, returns NULL if there is no change
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Size,
    ffi.Size,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_delete_text(
  int editor_handle,
  int start_line,
  int start_column,
  int end_line,
  int end_column,
  ffi.Pointer<ffi.Size> out_size,
);

/// Delete one character before cursor (Backspace behavior); delete selection if present
/// @return TextEditResult binary payload, returns NULL if there is no change
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_backspace(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Delete one character after cursor (Delete behavior); delete selection if present
/// @return TextEditResult binary payload, returns NULL if there is no change
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_delete_forward(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Move current line (or lines covered by selection) up by one line
/// @return TextEditResult binary payload, returns NULL if there is no change
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_move_line_up(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Move current line (or lines covered by selection) down by one line
/// @return TextEditResult binary payload, returns NULL if there is no change
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_move_line_down(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Copy current line (or lines covered by selection) upward
/// @return TextEditResult binary payload, returns NULL if there is no change
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_copy_line_up(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Copy current line (or lines covered by selection) downward
/// @return TextEditResult binary payload, returns NULL if there is no change
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_copy_line_down(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Delete current line (or all lines covered by selection)
/// @return TextEditResult binary payload, returns NULL if there is no change
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_delete_line(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Insert empty line above current line
/// @return TextEditResult binary payload, returns NULL if there is no change
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_insert_line_above(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Insert empty line below current line
/// @return TextEditResult binary payload, returns NULL if there is no change
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_insert_line_below(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Undo last edit operation
/// @return TextEditResult binary payload, returns NULL when nothing can be undone
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_undo(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Redo last undone operation
/// @return TextEditResult binary payload, returns NULL when nothing can be redone
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_redo(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

/// Whether undo is available
/// @return 1=yes, 0=no
@ffi.Native<ffi.Int Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external int editor_can_undo(int editor_handle);

/// Whether redo is available
/// @return 1=yes, 0=no
@ffi.Native<ffi.Int Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external int editor_can_redo(int editor_handle);

/// Set cursor position
/// @param line Line number(0-based)
/// @param column Column number (0-based)
@ffi.Native<ffi.Void Function(ffi.IntPtr, ffi.Size, ffi.Size)>(
  assetId: _sweeteditorAssetId,
)
external void editor_set_cursor_position(
  int editor_handle,
  int line,
  int column,
);

/// Get cursor position
/// @param out_line Output: line number
/// @param out_column Output: column number
@ffi.Native<
  ffi.Void Function(ffi.IntPtr, ffi.Pointer<ffi.Size>, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external void editor_get_cursor_position(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_line,
  ffi.Pointer<ffi.Size> out_column,
);

/// Select all
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void editor_select_all(int editor_handle);

/// Set selection range
/// @param start_line selection start line(0-based)
/// @param start_column selection start column (0-based)
/// @param end_line selection end line(0-based)
/// @param end_column selection end column (0-based)
@ffi.Native<
  ffi.Void Function(ffi.IntPtr, ffi.Size, ffi.Size, ffi.Size, ffi.Size)
>(assetId: _sweeteditorAssetId)
external void editor_set_selection(
  int editor_handle,
  int start_line,
  int start_column,
  int end_line,
  int end_column,
);

/// Get current selection range (two cursor positions)
/// @param out_start_line Output: selection start line
/// @param out_start_column Output: selection start column
/// @param out_end_line Output: selection end line
/// @param out_end_column Output: selection end column
/// @return 1=has selection, 0=no selection
@ffi.Native<
  ffi.Int Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Size>,
    ffi.Pointer<ffi.Size>,
    ffi.Pointer<ffi.Size>,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external int editor_get_selection(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_start_line,
  ffi.Pointer<ffi.Size> out_start_column,
  ffi.Pointer<ffi.Size> out_end_line,
  ffi.Pointer<ffi.Size> out_end_column,
);

/// Get selected text
/// @return Selected text (UTF8)
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.IntPtr)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Char> editor_get_selected_text(int editor_handle);

/// Get text range of word at cursor (scan continuous word chars to the left)
/// @param out_start_line Output: start line
/// @param out_start_column Output: start column
/// @param out_end_line Output: end line
/// @param out_end_column Output: end column
@ffi.Native<
  ffi.Void Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Size>,
    ffi.Pointer<ffi.Size>,
    ffi.Pointer<ffi.Size>,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external void editor_get_word_range_at_cursor(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_start_line,
  ffi.Pointer<ffi.Size> out_start_column,
  ffi.Pointer<ffi.Size> out_end_line,
  ffi.Pointer<ffi.Size> out_end_column,
);

/// Get text content of word at cursor
/// @return Word text (UTF8); returns empty string when cursor is not on a word
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.IntPtr)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Char> editor_get_word_at_cursor(int editor_handle);

/// Move cursor left
/// @param extend_selection Whether to extend selection (Shift behavior)
@ffi.Native<ffi.Void Function(ffi.IntPtr, ffi.Int)>(
  assetId: _sweeteditorAssetId,
)
external void editor_move_cursor_left(int editor_handle, int extend_selection);

/// Move cursor right
/// @param extend_selection Whether to extend selection
@ffi.Native<ffi.Void Function(ffi.IntPtr, ffi.Int)>(
  assetId: _sweeteditorAssetId,
)
external void editor_move_cursor_right(int editor_handle, int extend_selection);

/// Move cursor up
/// @param extend_selection Whether to extend selection
@ffi.Native<ffi.Void Function(ffi.IntPtr, ffi.Int)>(
  assetId: _sweeteditorAssetId,
)
external void editor_move_cursor_up(int editor_handle, int extend_selection);

/// Move cursor down
/// @param extend_selection Whether to extend selection
@ffi.Native<ffi.Void Function(ffi.IntPtr, ffi.Int)>(
  assetId: _sweeteditorAssetId,
)
external void editor_move_cursor_down(int editor_handle, int extend_selection);

/// Move cursor to line start
/// @param extend_selection Whether to extend selection
@ffi.Native<ffi.Void Function(ffi.IntPtr, ffi.Int)>(
  assetId: _sweeteditorAssetId,
)
external void editor_move_cursor_to_line_start(
  int editor_handle,
  int extend_selection,
);

/// Move cursor to line end
/// @param extend_selection Whether to extend selection
@ffi.Native<ffi.Void Function(ffi.IntPtr, ffi.Int)>(
  assetId: _sweeteditorAssetId,
)
external void editor_move_cursor_to_line_end(
  int editor_handle,
  int extend_selection,
);

/// Notify editor that IME composition starts
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void editor_composition_start(int editor_handle);

/// Update IME composition text
/// @param text Current composition text (UTF8), full composition text each time not incremental
@ffi.Native<ffi.Void Function(ffi.IntPtr, ffi.Pointer<ffi.Char>)>(
  assetId: _sweeteditorAssetId,
)
external void editor_composition_update(
  int editor_handle,
  ffi.Pointer<ffi.Char> text,
);

/// End IME composition and commit final text
/// @param committed_text Final committed text (UTF8); if NULL, use current composition text
/// @return TextEditResult binary payload, returns NULL if there is no change
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_composition_end(
  int editor_handle,
  ffi.Pointer<ffi.Char> committed_text,
  ffi.Pointer<ffi.Size> out_size,
);

/// Cancel IME composition (do not commit any text)
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void editor_composition_cancel(int editor_handle);
